src/main/java/com/squid/core/expression/parser/ExpressionParserImp.java
/* Generated By:JavaCC: Do not edit this line. ExpressionParserImp.java */
package com.squid.core.expression.parser;

import java.io.StringReader;
import java.util.*;
import com.squid.core.expression.*;
import com.squid.core.expression.scope.*;

public class ExpressionParserImp
extends ExpressionParser implements ExpressionParserImpConstants {

        public ExpressionParserImp(ExpressionScope scope, String text) {
                this(new StringReader(text));
                this.scope = scope;
        }

        /*
	public ConstantExpression parseConstant(ExpressionScope scope) throws ParseException {
		return constant(scope);
	}
	*/

        public ExpressionAST parseExpression() throws ParseException {
                return expression(scope);
        }

        protected ExpressionAST createRawOperator(int operatorKind, ExpressionAST expression, ExpressionAST sub) throws ScopeException {
                ExpressionAST result = null;
                switch (operatorKind) {
                        case PLUS:
                                result = scope.createSigmaOperator(expression,sub);
                                break;
                        case MINUS:
                                result = scope.createOperator("SUBTRACTION",expression,sub);
                                break;
                        case DIVIDE:
                                result = scope.createOperator("DIVIDE",expression,sub);
                                break;
                        case MULTIPLY:
                                result = scope.createOperator("MULTIPLY",expression,sub);
                                break;
                        case LESSTHAN:
                                result = scope.createOperator("LESS",expression,sub);
                                break;
                        case LESSOREQUALTHAN:
                                result = scope.createOperator("LESS_OR_EQUAL",expression,sub);
                                break;
                        case GREATERTHAN:
                                result = scope.createOperator("GREATER",expression,sub);
                                break;
                        case GREATEROREQUALTHAN:
                                result = scope.createOperator("GREATER_OR_EQUAL",expression,sub);
                                break;
                        case EQUAL:
                                result = scope.createOperator("EQUAL",expression,sub);
                                break;
                        case NOTEQUAL:
                                result = scope.createOperator("NOT_EQUAL",expression,sub);
                                break;
                        case AND:
                                result = scope.createOperator("AND",expression,sub);
                                break;
                        case OR:
                                result = scope.createOperator("OR",expression,sub);
                                break;
                        case MODULO:
                                result = scope.createOperator("MODULO",expression,sub);
                                break;
                        case EXPONENTIATE:
                                result = scope.createOperator("EXPONENTIATE",expression,sub);
                                break;
                }
                return result;
        }

        protected Operator createInfixOperator(int operatorKind) throws ScopeException {
                switch (operatorKind) {
                        case PLUS:
                                return scope.createOperator("PLUS");
                        case MINUS:
                                return scope.createOperator("SUBTRACTION");
                        case DIVIDE:
                                return scope.createOperator("DIVIDE");
                        case MULTIPLY:
                                return scope.createOperator("MULTIPLY");
                        case LESSTHAN:
                                return scope.createOperator("LESS");
                        case LESSOREQUALTHAN:
                                return scope.createOperator("LESS_OR_EQUAL");
                        case GREATERTHAN:
                                return scope.createOperator("GREATER");
                        case GREATEROREQUALTHAN:
                                return scope.createOperator("GREATER_OR_EQUAL");
                        case EQUAL:
                                return scope.createOperator("EQUAL");
                        case NOTEQUAL:
                                return scope.createOperator("NOT_EQUAL");
                        case AND:
                                return scope.createOperator("AND");
                        case OR:
                                return scope.createOperator("OR");
                        case MODULO:
                                return scope.createOperator("MODULO");
                        case EXPONENTIATE:
                                return scope.createOperator("EXPONENTIATE");
                        default:
                                return scope.createOperator("UNDEFINED");
                }
        }

  final public ExpressionAST expression(ExpressionScope scope) throws ParseException {
        ExpressionAST expression;
        Token identifier = null;
    expression = expression_X(scope);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      identifier = extended_identifier();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(0);
          if (identifier!=null)
          {
        expression.setName(identifier.image);
          }
          {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST expression_X(ExpressionScope scope) throws ParseException {
        ArrayList<ExpressionOperatorPair> L2 = null;
    L2 = expressionL2(scope);
                {if (true) return buildExpression(L2);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<ExpressionOperatorPair> expressionL2(ExpressionScope scope) throws ParseException {
        ExpressionAST expression;
        Operator operator = null;
        ArrayList<ExpressionOperatorPair> sub = null;
    expression = signed_expression(scope);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
    case EXPONENTIATE:
    case MULTIPLY:
    case DIVIDE:
    case LESSTHAN:
    case LESSOREQUALTHAN:
    case GREATERTHAN:
    case GREATEROREQUALTHAN:
    case OR:
    case AND:
    case EQUAL:
    case NOTEQUAL:
    case MODULO:
    case IDENTIFIER:
      operator = infix_operator();
      sub = expressionL2(scope);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
                if (operator==null) {
                        sub = new ArrayList<ExpressionOperatorPair>(2);
                        sub.add(new ExpressionOperatorPair(expression));
                        {if (true) return sub;}
                } else {
                        sub.add(0,new ExpressionOperatorPair(expression,operator));
                        {if (true) return sub;}
                }
    throw new Error("Missing return statement in function");
  }

  final public Token extended_identifier() throws ParseException {
        Token t1;
    t1 = jj_consume_token(STRING_IDENTIFIER);
                {if (true) return removeSurrounding(t1);}
    throw new Error("Missing return statement in function");
  }

  final public Operator infix_operator() throws ParseException {
        Token operator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
    case EXPONENTIATE:
    case MULTIPLY:
    case DIVIDE:
    case LESSTHAN:
    case LESSOREQUALTHAN:
    case GREATERTHAN:
    case GREATEROREQUALTHAN:
    case OR:
    case AND:
    case EQUAL:
    case NOTEQUAL:
    case MODULO:
      operator = infix_token();
                                 {if (true) return createInfixOperator(operator.kind);}
      break;
    case IDENTIFIER:
      operator = jj_consume_token(IDENTIFIER);
                                {if (true) return createInfixOperator(operator.image);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Token infix_token() throws ParseException {
        Token operator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      operator = jj_consume_token(PLUS);
                              {if (true) return operator;}
      break;
    case MINUS:
      operator = jj_consume_token(MINUS);
                               {if (true) return operator;}
      break;
    case DIVIDE:
      operator = jj_consume_token(DIVIDE);
                                {if (true) return operator;}
      break;
    case MULTIPLY:
      operator = jj_consume_token(MULTIPLY);
                                  {if (true) return operator;}
      break;
    case LESSTHAN:
      operator = jj_consume_token(LESSTHAN);
                                  {if (true) return operator;}
      break;
    case LESSOREQUALTHAN:
      operator = jj_consume_token(LESSOREQUALTHAN);
                                         {if (true) return operator;}
      break;
    case GREATERTHAN:
      operator = jj_consume_token(GREATERTHAN);
                                     {if (true) return operator;}
      break;
    case GREATEROREQUALTHAN:
      operator = jj_consume_token(GREATEROREQUALTHAN);
                                            {if (true) return operator;}
      break;
    case EQUAL:
      operator = jj_consume_token(EQUAL);
                               {if (true) return operator;}
      break;
    case NOTEQUAL:
      operator = jj_consume_token(NOTEQUAL);
                                  {if (true) return operator;}
      break;
    case AND:
      operator = jj_consume_token(AND);
                             {if (true) return operator;}
      break;
    case OR:
      operator = jj_consume_token(OR);
                            {if (true) return operator;}
      break;
    case MODULO:
      operator = jj_consume_token(MODULO);
                                {if (true) return operator;}
      break;
    case EXPONENTIATE:
      operator = jj_consume_token(EXPONENTIATE);
                                      {if (true) return operator;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST signed_expression(ExpressionScope scope) throws ParseException {
        ExpressionAST simple;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      simple = simple_expression(scope);
                {if (true) return createOperator(scope,"MINUS",simple);}
      break;
    case AROBASE:
    case SHARP:
    case DOLLAR:
    case NULL:
    case TRUE:
    case FALSE:
    case INTEGER:
    case STRING_LITERAL:
    case STRING_IDENTIFIER:
    case IDENTIFIER:
    case LPAREN:
    case LBRACE:
    case LBRACKET:
    case 48:
      simple = simple_expression(scope);
                {if (true) return simple;}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST simple_expression(ExpressionScope scope) throws ParseException {
        ExpressionAST expression;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      expression = null_constant(scope);
      break;
    case TRUE:
    case FALSE:
      expression = boolean_constant(scope);
      break;
    case 48:
      expression = date_constant(scope);
      break;
    case INTEGER:
    case STRING_LITERAL:
      expression = primitive_constant(scope);
      break;
    case IDENTIFIER:
      expression = apply_operator(scope);
      break;
    case LPAREN:
      expression = group_expression(scope);
      break;
    case LBRACE:
      expression = vector_expression(scope);
      break;
    case SHARP:
      expression = column_reference(scope);
      break;
    case AROBASE:
    case DOLLAR:
    case STRING_IDENTIFIER:
    case LBRACKET:
      if (jj_2_1(2147483647)) {
        expression = compose_path(scope);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRING_IDENTIFIER:
          expression = attribute_reference(scope);
          break;
        case AROBASE:
          expression = id_reference(scope);
          break;
        case LBRACKET:
          expression = typed_reference(scope);
          break;
        case DOLLAR:
          expression = parameter_reference(scope);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST vector_expression(ExpressionScope scope) throws ParseException {
        ExpressionAST head;
        List tail=null;
    jj_consume_token(LBRACE);
    head = expression_X(scope);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      tail = expression_list(scope);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
                if (tail==null) tail = new ArrayList();
                tail.add(0,head);
                {if (true) return createOperator(scope,"VECTOR",tail);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST group_expression(ExpressionScope scope) throws ParseException {
        ExpressionAST expr;
    jj_consume_token(LPAREN);
    expr = expression_X(scope);
    jj_consume_token(RPAREN);
                {if (true) return createOperator(scope,"GROUP",expr);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST null_constant(ExpressionScope scope) throws ParseException {
        ExpressionAST expr;
    jj_consume_token(NULL);
                {if (true) return scope.createNullValue();}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST boolean_constant(ExpressionScope scope) throws ParseException {
        ExpressionAST constant;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      constant = true_constant(scope);
      break;
    case FALSE:
      constant = false_constant(scope);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return constant;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST true_constant(ExpressionScope scope) throws ParseException {
    jj_consume_token(TRUE);
                {if (true) return createConstant(scope,true);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST false_constant(ExpressionScope scope) throws ParseException {
    jj_consume_token(FALSE);
                {if (true) return createConstant(scope,false);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST date_constant(ExpressionScope scope) throws ParseException {
        Token year,month,day;
        Token date;
        Token decimal = null;
    jj_consume_token(48);
    date = jj_consume_token(STRING_LITERAL);
    jj_consume_token(RPAREN);
                //String y = year.image;
                //String m = month.image;
                //String d = day.image;
                //return scope.createDateConstantValue(y,m,d);
                String image = date.image;
                if (image.length()>1) {
                        {if (true) return scope.createDateConstantValue(image.substring(1,image.length()-1));}
                } else {
                        {if (true) throw new ParseException("invalid date format");}
                }
    throw new Error("Missing return statement in function");
  }

  final public ConstantValue primitive_constant(ExpressionScope scope) throws ParseException {
        ConstantValue constant;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      constant = numerical_constant(scope);
      break;
    case STRING_LITERAL:
      constant = string_constant(scope);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return constant;}
    throw new Error("Missing return statement in function");
  }

  final public ConstantValue numerical_constant(ExpressionScope scope) throws ParseException {
        Token identifier;
        Token decimal = null;
    identifier = jj_consume_token(INTEGER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      jj_consume_token(DOT);
      decimal = jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
                String image = identifier.image;
                if (decimal!=null) {
                        image += "."+decimal.image;
                }
                {if (true) return scope.createNumericalConstantValue(image);}
    throw new Error("Missing return statement in function");
  }

  final public ConstantValue string_constant(ExpressionScope scope) throws ParseException {
        Token identifier;
    identifier = jj_consume_token(STRING_LITERAL);
                String image = identifier.image;
                {if (true) return scope.createStringConstantValue(image);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST compose_path(ExpressionScope scope) throws ParseException {
    ExpressionAST first = null;
    ExpressionAST second = null;
    first = composable_expression(scope);
    jj_consume_token(DOT);
    second = simple_expression(scope.applyExpression(first));
        if (second!=null) {
            {if (true) return scope.createCompose(first,second);}
        } else {
            {if (true) return first;}
        }
    throw new Error("Missing return statement in function");
  }

  final public ExpressionAST composable_expression(ExpressionScope scope) throws ParseException {
  ExpressionAST expr = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_IDENTIFIER:
      expr = composable_attribute_reference(scope);
      break;
    case AROBASE:
      expr = id_reference(scope);
      break;
    case LBRACKET:
      expr = typed_reference(scope);
      break;
    case DOLLAR:
      expr = parameter_reference(scope);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }
